fix(invoiceSummary): update button styles and link behavior
- Add target="_blank" attribute to the revised invoice link for opening in a new tab.
- Enhance button hover effects in the part level link for improved user interaction.
- Adjust transition timing for button animations to create a smoother experience.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -1113,7 +1113,7 @@
                   </button>
                 </li>
               </div>
-              <a href="revisedInvoice.html" class="btn btn-primary" style="display:flex; align-items:center; gap:0.5rem; padding:0.5rem 1rem; font-weight:500; font-size:0.875rem; background:linear-gradient(135deg, #4f46e5 0%, #6366f1 100%); border:none; box-shadow:0 2px 4px rgba(99, 102, 241, 0.2); transition:all 0.2s ease;">
+              <a href="revisedInvoice.html" target="_blank" class="btn btn-primary" style="display:flex; align-items:center; gap:0.5rem; padding:0.5rem 1rem; font-weight:500; font-size:0.875rem; background:linear-gradient(135deg, #4f46e5 0%, #6366f1 100%); border:none; box-shadow:0 2px 4px rgba(99, 102, 241, 0.2); transition:all 0.2s ease;">
                 <i class="bi bi-file-earmark-text"></i>
                 <span>Revised Invoice</span>
               </a>
@@ -1345,9 +1345,9 @@
               <i class="bi bi-sliders" style="color:#6366f1;"></i>
               <span style="font-size:0.875rem; color:#6b7280;">Review recommendations at the part level</span>
             </div>
-            <a href="partLevel.html" class="btn btn-primary" style="display:flex; align-items:center; gap:0.5rem; padding:0.5rem 1rem; font-weight:500; font-size:0.875rem; background:linear-gradient(135deg, #4f46e5 0%, #6366f1 100%); border:none; box-shadow:0 2px 4px rgba(99, 102, 241, 0.2); transition:all 0.2s ease;">
+            <a href="partLevel.html" class="btn btn-primary" style="display:flex; align-items:center; gap:0.5rem; padding:0.5rem 1rem; font-weight:500; font-size:0.875rem; background:linear-gradient(135deg, #4f46e5 0%, #6366f1 100%); border:none; box-shadow:0 2px 4px rgba(99, 102, 241, 0.2); transition:all 0.3s ease; position:relative; overflow:hidden;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)';">
               <span>Part Level</span>
-              <i class="bi bi-arrow-right" style="font-size:1em; transition:transform 0.2s ease;"></i>
+              <i class="bi bi-arrow-right" style="font-size:1em; transition:transform 0.3s ease;" onmouseover="this.style.transform='translateX(4px)'" onmouseout="this.style.transform='translateX(0)'"></i>
             </a>
           </div>
         </div>
