--- a/revisedInvoice.html
+++ b/revisedInvoice.html
@@ -85,7 +85,7 @@
               <span class="nav-subtitle">Monitor Shop Performance</span>
             </div>
           </a>
-          <a class="nav-link active" href="invoiceSummary.html">
+          <a class="nav-link" href="invoiceSummary.html">
             <i class="bi bi-file-text"></i>
             <div class="nav-content">
               <span class="nav-title">Invoice Summary</span>
