feat(shop): add loader overlay and refactor loading functions
- Introduce a new loader CSS file for a centralized loading overlay with spinner.
- Update shop.html to include the loader stylesheet for improved user experience.
- Refactor JavaScript loading functions to utilize a new Loader object for better management of loading states.
- Enhance section transitions by ensuring data preparation occurs before displaying sections, improving responsiveness.

--- a/shop.html
+++ b/shop.html
@@ -19,6 +19,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="src/css/shop.css">
+  <link rel="stylesheet" href="src/css/loader.css">
   <style>
     .loader-overlay {
       position: absolute;
