--- a/shop.html
+++ b/shop.html
@@ -935,6 +935,10 @@
         </div>
         <div class="modal-body">
           <div class="file-upload-container">
+            <div class="upload-text mb-2">
+              <i class="bi bi-info-circle"></i>
+              <span>Upload contract documents, service visit details, or billing receipts</span>
+            </div>
             <div class="file-upload-area">
               <i class="bi bi-cloud-upload"></i>
               <span>Drag & drop files here or</span>
