feat(invoiceSummary): enhance card trend display with new styles and indicators
- Introduce new trend indicators for charges, including overbilled and underbilled categories, to provide clearer insights.
- Add neutral trend indicators for items with no change, improving overall data representation.
- Implement enhanced CSS styles for card trends, including animations and responsive design adjustments, to elevate user experience.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -394,6 +394,18 @@
                       <div class="card-title">InScope Charges</div>
                       <div class="card-value">$2,752,670</div>
                       <div class="card-percentage">61.5%</div>
+                      <div class="card-trend negative">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-down"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Overbilled</span>
+                          <span class="trend-value">$41,800</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 65%"></div>
+                        </div>
+                      </div>
                     </div>
                     <button class="card-action-btn" data-category="inscope">
                       <i class="bi bi-arrow-right"></i>
@@ -408,6 +420,18 @@
                       <div class="card-title">LLPs Replacement</div>
                       <div class="card-value">$1,632,712</div>
                       <div class="card-percentage">36.5%</div>
+                      <div class="card-trend positive">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-up"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Underbilled</span>
+                          <span class="trend-value">$146,586</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 85%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -419,6 +443,18 @@
                       <div class="card-title">QEC & LRU Replacement</div>
                       <div class="card-value">$16,780</div>
                       <div class="card-percentage">0.4%</div>
+                      <div class="card-trend negative">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-down"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Overbilled</span>
+                          <span class="trend-value">$70,900</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 75%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -431,6 +467,18 @@
                       <div class="card-title">Out-Of-Scope</div>
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
+                      <div class="card-trend neutral">
+                        <div class="trend-icon">
+                          <i class="bi bi-dash"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">No Change</span>
+                          <span class="trend-value">-</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 50%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -442,6 +490,18 @@
                       <div class="card-title">Missing Items</div>
                       <div class="card-value">$247</div>
                       <div class="card-percentage">0.01%</div>
+                      <div class="card-trend negative">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-down"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Overbilled</span>
+                          <span class="trend-value">$117,400</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 90%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -453,6 +513,18 @@
                       <div class="card-title">Service Bulletin</div>
                       <div class="card-value">$60,914</div>
                       <div class="card-percentage">1.4%</div>
+                      <div class="card-trend negative">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-down"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Overbilled</span>
+                          <span class="trend-value">$94,400</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 80%"></div>
+                        </div>
+                      </div>
                     </div>
                     <button class="card-action-btn" data-category="service">
                       <i class="bi bi-arrow-right"></i>
@@ -467,6 +539,18 @@
                       <div class="card-title">Stand Repair</div>
                       <div class="card-value">$1,000</div>
                       <div class="card-percentage">0.02%</div>
+                      <div class="card-trend negative">
+                        <div class="trend-icon">
+                          <i class="bi bi-arrow-down"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">Overbilled</span>
+                          <span class="trend-value">$33,300</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 70%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -478,6 +562,18 @@
                       <div class="card-title">Material Transportation</div>
                       <div class="card-value">$7,877</div>
                       <div class="card-percentage">0.2%</div>
+                      <div class="card-trend neutral">
+                        <div class="trend-icon">
+                          <i class="bi bi-dash"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">No Change</span>
+                          <span class="trend-value">-</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 50%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
@@ -489,6 +585,18 @@
                       <div class="card-title">TAT Remedy</div>
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
+                      <div class="card-trend neutral">
+                        <div class="trend-icon">
+                          <i class="bi bi-dash"></i>
+                        </div>
+                        <div class="trend-content">
+                          <span class="trend-label">No Change</span>
+                          <span class="trend-value">-</span>
+                        </div>
+                        <div class="trend-indicator">
+                          <div class="indicator-bar" style="height: 50%"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
