refactor(invoiceSummary): update invoice review section and enhance table interactions
- Comment out the SV Summary Section in invoiceCreation.html for future reference.
- Add interactive links to In-Scope and Out-Of-Scope CharBEs in invoiceSummary.html, improving user navigation.
- Introduce new CSS styles for table links in invoiceSummary.css to enhance visual appeal and user experience.
- Implement JavaScript functions to manage the invoice review modal, allowing dynamic content updates based on user interactions.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -462,7 +462,7 @@
                 </div>
 
                 <!-- SV Summary Section -->
-                <div class="section-container">
+                <!-- <div class="section-container">
                   <div class="section-header">
                     <h3 class="section-title">
                       <i class="bi bi-list-check"></i>
@@ -482,7 +482,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <!-- USED-LLP Logic Section -->
                 <div class="section-container">
