fix(invoiceSummary): refine table link markup for consistency
- Remove unnecessary href="#" attributes from table links in the invoice summary to improve semantic HTML.
- Ensure consistent styling and functionality for In-Scope and Out-Of-Scope CharBEs links, enhancing user navigation experience.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -728,7 +728,7 @@
                     <tr>
                       <td>
                         In-Scope CharBEs
-                        <a href="#" class="table-link" data-category="inscope" style="float: right;" onclick="openInvoiceReview('inscope')">
+                        <a class="table-link" data-category="inscope" style="float: right;" onclick="openInvoiceReview('inscope')">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </td>
@@ -757,7 +757,7 @@
                     <tr>
                       <td>
                         Out-Of Scope Service Bulletin
-                        <a href="#" class="table-link" data-category="service" style="float: right;" onclick="openInvoiceReview('service')">
+                        <a class="table-link" data-category="service" style="float: right;" onclick="openInvoiceReview('service')">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </td>
