feat(invoiceSummary): add new invoice summary page and update existing invoice title
- Introduce a new invoice summary page (invoiceSummary2.html) with a comprehensive layout for displaying invoice details and recommendations.
- Update the title in the existing invoice summary section from "Final Invoice" to "Invoice" for consistency and clarity.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -604,7 +604,7 @@
                 <div class="invoice-view" style="display:none; margin-top:1.5rem;">
 
 
-                  <h2>Final Invoice</h2>
+                  <h2>Invoice</h2>
 
                   <!-- Top Section -->
                   <table>
